--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
                 <h2>Search by Full Name or Alias</h2>
                 <form class="example" action="" >
                 <input type="text" name="search" id = "search" placeholder="E.g. Captain America or Steve Rogers" name="search">
-                <button type="submit" id ="button" class = "btn"> Search </button>
+                <button type="submit" id ="button" class = "myBtn"> Search </button>
               </form>
-      
+              <h2>RESULTS</h2>
+              <hr>
+              <div id="results"></div>
         </div>
+        
     </section>
     </main>
     <footer>
