Exercise 2 Slight Modification

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <h2>Search by Full Name or Alias</h2>
                 <form class="example" action="" >
-                <input type="text" name="search" id = "search" placeholder="E.g. Captain America or Steve Rogers" name="search">
+                <input type="text"  id = "search" placeholder="E.g. Captain America or Steve Rogers" name="search">
                 <button type="submit" id ="button" class = "myBtn"> Search </button>
               </form>
               <h2>RESULTS</h2>
